--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="data-ein" content="10343833">
 <meta name="data-name" content="Street Reach 907">
   <meta name="description" content="Our nonprofit strengthens the community with programs focused on community services, education, and direct relief.">
+<meta name="facebook-domain-verification" content="5m5hswnzrlv5v468jjppezyzc161d2" />
 </head>
 <body>
 <div style="position:absolute;left:-9999px;top:-9999px;opacity:0" data-uniq="{{UNIQUE_BLOB}}">
